# polyagon

./: .gitignore  README.md  pyproject.toml  test.mesh
data/: pentagon.mesh  square.mesh  triangle.mesh
polyagon/: ex11p.py  exmesh.py  minimum.py
tests/: test_polyagon.py
