[tool.poetry]
name = "polyagon"
version = "0.1.0"
description = ""
authors = ["orlogan <orlogan7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "^7.1.2"
numpy = "^1.23.1"
scipy = "^1.8.1"
six = "^1.16.0"
matplotlib = "^3.5.2"
mpi4py = "^3.1.3"
mfem = {path = "../pyfem/mfem-4.4.0.0/", develop = true}
black = "^22.6.0"
pyglvis = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
